--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto&family=Source+Code+Pro:wght@600&display=swap"
       rel="stylesheet"
     />
-    <title>Miranda</title>
+    <title>Oracle</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
