--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </div>
   </body>
 
-  <script></script>
+  <script>
+    
+  </script>
   <script src="talk.js"></script>
   <script type="module" src="app.js"></script>
 </html>
